--- a/app/src/main/res/layout/ts_user_info_fragment.xml
+++ b/app/src/main/res/layout/ts_user_info_fragment.xml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/topSheet"
     android:layout_width="match_parent"
-    android:layout_height="300dp">
-    <TextView
-        android:id="@+id/ddd"
+    android:layout_height="wrap_content"
+    android:padding="16dp"
+    android:transitionName="sharedElem_homesettings">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/googleLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            style="@style/BoldTextView"
+            android:text="Login With Google"/>
+    </FrameLayout>
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/settingsIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="testo di prova" />
-</FrameLayout>
+        app:srcCompat="@drawable/ic_settings"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
